--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "server": "node server"
+        "server": "nodemon server"
     },
     "eslintConfig": {
         "extends": [
@@ -37,9 +37,11 @@
         ]
     },
     "devDependencies": {
+        "axios": "^0.27.2",
         "dotenv": "^16.0.2",
         "express": "^4.18.1",
+        "http-proxy-middleware": "^2.0.6",
+        "nodemon": "^2.0.19",
         "request": "^2.88.2"
-    },
-    "proxy": "http://localhost:5000"
+    }
 }
